# oggm

./: pyproject.toml
docs/: installing-oggm.rst  whats-new.rst
oggm/: cfg.py
oggm/core/: massbalance.py
oggm/tests/: funcs.py  test_shop.py  test_utils.py
oggm/utils/: _funcs.py
