[build-system]
requires = ["uv_build >= 0.9.28, <0.11.0"]
build-backend = "uv_build"

[project]
name = "oggm"
version = "0.1.0"
authors = [
{ name = "OGGM Contributors", email = "fabien.maussion@uibk.ac.at"}
]
description = "Open Global Glacier Model"
readme = "README.rst"
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "configobj>=5.0.8",
    "matplotlib>=3.3.4",
    "netcdf4>=1.6.2",
    "numpy>=2.0",
    "pandas<3.0",
    "requests>=2.27.1",
    "scipy>=1.5.4",
    "shapely>=1.8.5.post1",
    "xarray>=0.16.2",
]

[project.optional-dependencies]
build = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
full = [
    "oggm[build, docs, tests]",
    "bottleneck>=1.6.0",
    "cartopy>=0.25.0",
    "dask>=2026.1.2",
    "geopandas>=1.1.2",
    "ipython>=9.10.0",
    "joblib>=1.5.3",
    "motionless>=1.3.3",
    "netcdf4>=1.7.4",
    "pillow>=12.1.0",
    "progressbar2>=4.5.0",
    "pyproj>=3.7.2",
    "rasterio>=1.4.4",
    "rioxarray>=0.19.0",
    "salem>=0.3.11",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tables>=3.10.2",
]
docs = [
    "numpydoc>=1.10.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=9.0.4",
    "sphinx-book-theme>=0.3.2",
    "sphinx-intl>=2.3.2",
    "sphinx-reredirects>=1.1.0",
    "sphinx-togglebutton",
]
tests = [
    "pytest",
    "pytest-mpl",
]

[dependency-groups]
build = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
dev = [
    {include-group = "build"},
    {include-group = "docs"},
    {include-group = "tests"},
    "bottleneck>=1.6.0",
    "cartopy>=0.25.0",
    "dask>=2026.1.2",
    "geopandas>=1.1.2",
    "ipython>=9.10.0",
    "joblib>=1.5.3",
    "motionless>=1.3.3",
    "netcdf4>=1.7.4",
    "pillow>=12.1.0",
    "progressbar2>=4.5.0",
    "pyproj>=3.7.2",
    "rasterio>=1.4.4",
    "rioxarray>=0.19.0",
    "salem>=0.3.11",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tables>=3.10.2",
]
docs = [
    "numpydoc>=1.10.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=9.0.4",
    "sphinx-book-theme>=0.3.2",
    "sphinx-intl>=2.3.2",
    "sphinx-reredirects>=1.1.0",
    "sphinx-togglebutton",
]
tests = [
    "pytest",
    "pytest-mpl",
]


[project.urls]
"Homepage" = "https://oggm.org"
"Bug Tracker" = "https://github.com/OGGM/oggm/issues"
"Documentation" = "https://docs.oggm.org/"

[project.scripts]
oggm_prepro = "oggm.cli.prepro_levels:main"
oggm_benchmark = "oggm.cli.benchmark:main"
oggm_netrc_credentials = "oggm.cli.netrc_credentials:cli"
"pytest.oggm" = "oggm.tests.__main__:main"

[tool.hatch.build.targets.sdist]
packages = ["oggm"]

[tool.hatch.build.targets.wheel]
packages = ["dtcg"]

[tool.hatch.envs.default]
env-vars-file = ".env"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
pytest-mpl = { git = "https://github.com/OGGM/pytest-mpl" }

[tool.uv.build-backend]
module-root = ""
module-name = "oggm"
